src/objects/CVMA_Error_Log__c/CVMA_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Custom object to store error logs and debugging information for the CVMA application</description>
    <label>CVMA Error Log</label>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CVMA Error Logs</pluralLabel>
    <sharingModel>Private</sharingModel>

    <!-- Custom Fields -->
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>Name of the Apex class where the error occurred</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>Method_Name__c</fullName>
        <description>Name of the method where the error occurred</description>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>Error_Message__c</fullName>
        <description>The error message from the exception</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>

    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>Full stack trace of the error</description>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>

    <fields>
        <fullName>Error_Type__c</fullName>
        <description>Type of exception (e.g., DmlException, QueryException)</description>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>Severity__c</fullName>
        <description>Severity level of the error</description>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LOW</fullName>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>MEDIUM</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>HIGH</fullName>
                    <label>High</label>
                </value>
                <value>
                    <fullName>CRITICAL</fullName>
                    <label>Critical</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <fields>
        <fullName>Category__c</fullName>
        <description>Category of error for classification</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SECURITY</fullName>
                    <label>Security</label>
                </value>
                <value>
                    <fullName>DATA_VALIDATION</fullName>
                    <label>Data Validation</label>
                </value>
                <value>
                    <fullName>INTEGRATION</fullName>
                    <label>Integration</label>
                </value>
                <value>
                    <fullName>PERFORMANCE</fullName>
                    <label>Performance</label>
                </value>
                <value>
                    <fullName>BUSINESS_LOGIC</fullName>
                    <label>Business Logic</label>
                </value>
                <value>
                    <fullName>SYSTEM</fullName>
                    <default>true</default>
                    <label>System</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <fields>
        <fullName>User__c</fullName>
        <description>User who experienced the error</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>

    <fields>
        <fullName>Timestamp__c</fullName>
        <description>When the error occurred</description>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>

    <fields>
        <fullName>Org_Id__c</fullName>
        <description>Organization ID where error occurred</description>
        <label>Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>User_Profile__c</fullName>
        <description>Profile of the user who experienced the error</description>
        <label>User Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>Session_Id__c</fullName>
        <description>Session ID when the error occurred</description>
        <label>Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>Context_Data__c</fullName>
        <description>Additional context data as JSON</description>
        <label>Context Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>

    <fields>
        <fullName>Resolution_Notes__c</fullName>
        <description>Notes about how the error was resolved</description>
        <label>Resolution Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>

    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the error log</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>