src/objects/CVMA_Error_Log__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of error for classification</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SECURITY</fullName>
                <label>Security</label>
            </value>
            <value>
                <fullName>DATA_VALIDATION</fullName>
                <label>Data Validation</label>
            </value>
            <value>
                <fullName>INTEGRATION</fullName>
                <label>Integration</label>
            </value>
            <value>
                <fullName>PERFORMANCE</fullName>
                <label>Performance</label>
            </value>
            <value>
                <fullName>BUSINESS_LOGIC</fullName>
                <label>Business Logic</label>
            </value>
            <value>
                <fullName>SYSTEM</fullName>
                <default>true</default>
                <label>System</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>