src/objects/CVMA_Error_Log__c/fields/Context_Data__c.field-meta.xml
<CustomField>
    <fullName>Context_Data__c</fullName>
    <description>Additional context data as JSON</description>
    <label>Context Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>