src/objects/CVMA_Error_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>Type of exception (e.g., DmlException, QueryException)</description>
    <label>Error Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>