src/objects/CVMA_Error_Log__c/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <description>Organization ID where error occurred</description>
    <label>Org ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>