src/objects/CVMA_Error_Log__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Severity level of the error</description>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOW</fullName>
                <label>Low</label>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>HIGH</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>CRITICAL</fullName>
                <label>Critical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>