src/objects/CVMA_Error_Log__c/fields/User_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Profile__c</fullName>
    <description>Profile of the user who experienced the error</description>
    <label>User Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>